# mandelbrot-sequence

./: Main.hs  README.md  mandelbrot-sequence.cabal
